2009-10-14  Jaroslav Hajek  <highegg@gmail.com>

	* ov.cc (octave_value::octave_value (const Array<std::string>&)): New
	constructor.
	* ov.h: Declare it.
	* data.cc (Fnth_element): New DEFUN.

2009-10-13  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fcumsum, Fcumprod, Fprod, Fsum, Fsumsq): Correct help
	string.

2009-10-13  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Fsum): Rewrite.
	(Fcumsum): Rewrite.
	(NATIVE_REDUCTION, NATIVE_REDUCTION_1): Remove.

2009-10-12  Jaroslav Hajek  <highegg@gmail.com>

	* pt-binop.cc, pt-unop.cc: Revert the effect of 1be3c73ed7b5.

2009-10-12  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lu.cc (maybe_set_triangular): Remove.
	(get_lu_l, get_lu_u): New helper funcs.
	(Flu, Fluupdate): Use them to auto-set MatrixType of results.
	* DLD-FUNCTIONS/qr.cc (maybe_set_triangular): Remove.
	(get_qr_r): New helper func.
	(Fqr, Fqrupdate, Fqrinsert, Fqrdelete,
	Fqrshift): Use it to auto-set MatrixType of results.
	* DLD-FUNCTIONS/chol.cc (get_chol_r): New helper func.
	(Fchol, Fcholupdate, Fcholinsert, Fcholdelete, Fcholshift): Use it
	to auto-set MatrixType of result.

2009-10-12  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/matrix_type.cc (Fmatrix_type): Support 'nocompute'
	option.

2009-10-08  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lu.cc (Fluupdate): New DEFUN_DLD.
	(check_lu_dims): New helper func.

2009-10-08  Jaroslav Hajek  <highegg@gmail.com>

	* data.cc (Flength): Simplify.
	(Fndims): Simplify.
	(Fsize): Rewrite, use dim_vector::redim to simplify.
	(Fsize_equal): Don't chop trailing singletons (should be already chopped).

2009-10-08  Jaroslav Hajek  <highegg@gmail.com>

	* utils.cc (dims_to_numel): New function.
	* utils.h: Declare it.
	* ov-base.cc (octave_base_value::numel (const octave_value_list&)):
	Use it here.
	* data.cc (Fnumel): Also here.

2009-10-07  John W. Eaton  <jwe@octave.org>

	* variables.cc (get_dims_str): New function.
	(symbol_info_list::display_line,