@@ -1,3 +1,8 @@
+2009-10-15  Jaroslav Hajek  <highegg@gmail.com>
+
+	* variables.cc (extract_function): Pass 0 to eval_string to avoid
+	error.
+
 2009-10-14  Jaroslav Hajek  <highegg@gmail.com>
 
 	* ov.cc (octave_value::octave_value (const Array<std::string>&)): New
